# ctxgraph

./: .gitignore  PHASE2.md  PROGRESS.md  README.md  WORKFLOW.md  pyproject.toml
benchmarks/: BENCHMARK.md  BENCHMARKv2.md  BENCHMARKv3.md  BENCHMARKv4.md  compare_ollama.py  run_benchmarks.py  run_benchmarks_v2.py  run_benchmarks_v3.py  run_benchmarks_v3_ollama.py  run_benchmarks_v4.py  run_with_ollama.py  test_ollama_summary.py
benchmarks/results/: benchmark_results.json  benchmark_results_v2.json  benchmark_results_v3.json  benchmark_results_v3_ollama.json  benchmark_results_v4.json  error_empty.db  error_long_query.db  error_no_db.db  error_nonexistent.db  error_special_chars.db  error_syntax.db  error_syntax_check.db  json_vs_dsl_microsvc.db  json_vs_dsl_tiny_app.db  json_vs_dsl_web_api.db  microsvc_auth_service_balanced.db  microsvc_auth_service_deep.db  microsvc_auth_service_fast.db  microsvc_circuit_breaker_balanced.db  microsvc_circuit_breaker_deep.db  microsvc_circuit_breaker_fast.db  microsvc_notification_email_balanced.db  microsvc_notification_email_deep.db  microsvc_notification_email_fast.db  microsvc_payment_billing_balanced.db  microsvc_payment_billing_deep.db  microsvc_payment_billing_fast.db  microsvc_service_discovery_balanced.db  microsvc_service_discovery_deep.db  microsvc_service_discovery_fast.db  ollama_compare_microsvc.db  ollama_compare_tiny_app.db  ollama_compare_web_api.db  (+128 more)
tests/: test_analyzers.py  test_benchmark.py  test_capsule.py  test_config.py  test_integration.py  test_model_mode.py  test_models.py  test_query.py  test_storage.py
(+120 files in other folders)
